Remove overflow: auto to prevent scrollbars and add the clearfix class to the container div so the featured image is contained [touch: 2847]

--- a/templates/css/espresso_default.css
+++ b/templates/css/espresso_default.css
@@ -13,9 +13,6 @@
 	margin:5px;
 	padding:10px;
 }
-.event-data-display {
-	overflow: auto;
-}
 
 /* Widget Style */
 .widget.events ol {
